--- a/docs/css/capture.css
+++ b/docs/css/capture.css
@@ -8,16 +8,11 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-td, th{
-  width: 10%;
-  height: 30px;
-  border: #007bff 1px solid;
+h3{
+  border-left: 5px solid cyan;
 }
-.class{
-  display: inline-block;
-  float: right;
-  position: relative;
-  margin-right: 10%;
+.enh{
+  filter: drop-shadow(1px 1px 1px rgba(255, 100, 100, 1.0));
 }
 :root {
   --blue: #007bff;
@@ -9794,7 +9789,7 @@ html {
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
-  border-color: #3aa0f4;
+  border-color: cyan;
 }
 hr.light {
   border-color: #fff;
