--- a/docs/css/member.css
+++ b/docs/css/member.css
@@ -1,8 +1,21 @@
 body{
+  position: relative;
   background-image: url("../img/member-bg.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
+  z-index: 0;
+}
+body::before{
+  background: inherit;
+  content: '';
+  position: fixed;
+  filter: blur(5px);
+  top: -5px;
+  bottom: -5px;
+  left: -5px;
+  right: -5px;
+  z-index: -1;
 }
 #member {
   padding-top: 92px !important;
@@ -12,9 +25,9 @@ body{
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  box-shadow: 0 0 5px black;
+  box-shadow: 0 0 10px white;
   border-radius: 5px;
-  background: linear-gradient(#ffffff6e, #ffffff);
+  color: white;
 }
 .member-box img{
   border-radius: 5px 5px 0 0;
@@ -34,13 +47,13 @@ body{
   padding: 0 .5rem;
   margin: 0 .5rem;
   border-radius: 5px;
-  box-shadow: 0 0 3px black;
+  box-shadow: 0 0 5px white;
   list-style: none;
 }
 .member-box .member-border{
   width: 100%;
   height: 0;
-  border-bottom: 1px solid dimgray;
+  border-bottom: 1px solid aliceblue;
 }
 .member-box .content .name{
   padding: 1rem 1.5rem;
@@ -58,7 +71,7 @@ body{
   }
   .member-box img{
     border-radius: 5px;
-    box-shadow: 0 0 3px black;
+    box-shadow: 0 0 3px white;
   }
   .member-box .img,
   .member-box .content{
