--- a/docs/css/member.css
+++ b/docs/css/member.css
@@ -64,6 +64,8 @@ body::before{
 }
 .member-box .content .name a{
   position: relative;
+  text-align: center;
+  width: 90px;
   padding: .2rem 1rem;
   line-height: 2.5rem;
   color: white;
