--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -9,8 +9,13 @@
   margin-bottom: 1rem;
   color: black;
 }
-#infomation ol{
-  box-sizing: border-box;
-  box-shadow: 0 0 3px #888;
-  border-radius: 5px;
+#infomation ol.rule{
+  list-style: circle;
+}
+.card-dark > div{
+  margin-bottom: 1.5rem;
+}
+.card-dark h5{
+  border-left: 3px solid #666666;
+  padding-left: 0.5rem;
 }
