--- a/docs/css/capture.css
+++ b/docs/css/capture.css
@@ -4,12 +4,19 @@ h3{
 .enh{
   filter: drop-shadow(1px 1px 1px rgba(255, 100, 100, 1.0));
 }
-.movie-box{
+.iframe-wrapper{
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 0;
   margin-bottom: 1rem;
+  padding-bottom: 56.25%;
+  position: relative;
 }
 iframe.youtube{
+  position: absolute;
   width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
 }
