--- a/docs/css/capture.css
+++ b/docs/css/capture.css
@@ -20,3 +20,22 @@ iframe.youtube{
   left: 0;
   top: 0;
 }
+#canvas{
+  width: 80%;
+  height: auto;
+}
+path{
+  stroke-width: .1px;
+  fill-opacity: 0;
+  transition: fill-opacity .5s;
+}
+.fill path{
+  fill-opacity: 1;
+}
+
+@media screen and (min-width: 992px){
+  #canvas{
+    width: 50%;
+    height: auto;
+  }
+}
