--- a/docs/css/member.css
+++ b/docs/css/member.css
@@ -175,12 +175,26 @@ blockquote cite {
   width: auto;
   box-shadow: none !important;
 }
+
+.modal{
+  padding-right: 0px !important;
+}
+.modal-dialog{
+  max-width: none;
+  width: 95vw;
+  margin: 1.75rem auto;
+}
 .modal-content{
+  width: 100%;
   background-color: rgba(66, 66, 66, .5) !important;
 }
 .modal-content i{
   color: white;
   margin-bottom: 1rem;
+}
+.modal-content img{
+  width: 100%;
+  height: auto;
 }
 .modal-controller{
   display: flex;
@@ -234,6 +248,11 @@ path{
   }
   .name img{
     padding-right: 1rem;
+  }
+  .modal-dialog{
+    max-width: none;
+    width: 70vw;
+    margin: 1.75rem auto;
   }
   h1{
     font-size: 2.5rem;
